source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc
@@ -610,7 +610,7 @@ void update_lattice_edit_mode_pointers(const Depsgraph * /*depsgraph*/,
   lt_cow->editlatt = lt_orig->editlatt;
 }
 
-void update_mesh_edit_mode_pointers(const Depsgraph *depsgraph, const ID *id_orig, ID *id_cow)
+void update_mesh_edit_mode_pointers(const ID *id_orig, ID *id_cow)
 {
   /* For meshes we need to update edit_mesh to make it to point
    * to the CoW version of object.
@@ -624,7 +624,6 @@ void update_mesh_edit_mode_pointers(const Depsgraph *depsgraph, const ID *id_ori
     return;
   }
   mesh_cow->edit_mesh = (BMEditMesh *)MEM_dupallocN(mesh_orig->edit_mesh);
-  mesh_cow->edit_mesh->ob = (Object *)depsgraph->get_cow_id(&mesh_orig->edit_mesh->ob->id);
   mesh_cow->edit_mesh->mesh_eval_cage = NULL;
   mesh_cow->edit_mesh->mesh_eval_final = NULL;
 }
@@ -639,7 +638,7 @@ void update_edit_mode_pointers(const Depsgraph *depsgraph, const ID *id_orig, ID
       update_armature_edit_mode_pointers(depsgraph, id_orig, id_cow);
       break;
     case ID_ME:
-      update_mesh_edit_mode_pointers(depsgraph, id_orig, id_cow);
+      update_mesh_edit_mode_pointers(id_orig, id_cow);
       break;
     case ID_CU:
       update_curve_edit_mode_pointers(depsgraph, id_orig, id_cow);
